add-auth: add basic and token auth. (#12)
* add-auth: add basic and token auth.

* add-auth: mini fix.
